Implement UpdateProduct method and update configurations
- Modified `using Spectre.Console;` statement to remove an invisible character.
- Implemented `UpdateProduct` method in `ProductController` to update a product in the database using Entity Framework.
- Added `UpdateProduct` method to `ProductService` to handle user input and call `ProductController.UpdateProduct()`.
- Replaced `ProductController.UpdateProduct()` with `ProductService.UpdateProduct()` in `Program.cs` menu options handling.
- Updated `launchSettings.json` to change the `workingDirectory` path.
- Modified `products.db` binary file.

--- a/CoffeeShop.PointOfSales.EntityFramework/Properties/launchSettings.json
+++ b/CoffeeShop.PointOfSales.EntityFramework/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "CoffeeShop.PointOfSales.EntityFramework": {
       "commandName": "Project",
-      "workingDirectory": "C:\\Users\\johnn\\source\\repos\\CoffeeShop.PointOfSales.EntityFramework\\CoffeeShop.PointOfSales.EntityFramework"
+      "workingDirectory": "C:\\Users\\techw\\source\\repos\\CoffeeShop.PointOfSales.EntityFramework\\CoffeeShop.PointOfSales.EntityFramework"
     }
   }
 }
