--- a/.gitignore
+++ b/.gitignore
@@ -361,3 +361,5 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+/CoffeeShop.PointOfSales.EntityFramework/products.db
+/CoffeeShop.PointOfSales.EntityFramework/Properties/launchSettings.json
