Add Price migration and update .gitignore and namespace
Updated .gitignore to ignore SQLite database files.
Added new migration class `20250303172633_Add-Price` to include
a `Price` property for the `Product` entity.
Updated `ProductsContextModelSnapshot.cs` to reflect the
namespace change for the `Product` entity.

--- a/.gitignore
+++ b/.gitignore
@@ -366,3 +366,5 @@ CoffeeShop.PointOfSales.EntityFramework/products.db
 CoffeeShop.PointOfSales.EntityFramework/Properties/launchSettings.json
 *.db
 /products.db
+*.db-wal
+*.db-shm
